# NJU-nemu

./: .gitignore  CMakeLists.txt  Makefile  README.md
docker/: Dockerfile  README.md  build_docker.ps1  build_docker.sh  run_docker.ps1  run_docker.sh
game/: Makefile
include/: config.h
kernel/: CMakeLists.txt  Makefile  kernel  kernel.img
kernel/src/elf/: elf.c
kernel/src/lib/: serial.c
kernel/src/memory/: vmem.c
nemu/: CMakeLists.txt  Makefile  nemu
nemu/.cache/clangd/index/: adc.c.45E8F75D49925A6B.idx  adc.h.70AE9498A85B0B98.idx  add.c.B6F320092CCB2B91.idx  add.h.01C3D746E02B1ED5.idx  alu.c.D7357728F06E2717.idx  alu.h.0182441A3149D2B6.idx  alu_test.c.2E2DD945BB87A43E.idx  and.c.BF796BB5353C95D9.idx  and.h.EE3F32E515E90ADF.idx  audio-web.c.496FAE27EDD57B16.idx  audio.c.8CFB8918E5559316.idx  audio.h.807C1BBB49F8AAE9.idx  breakpoint.c.155C78A73DE775D2.idx  breakpoint.h.0AA502DB34C652B8.idx  bt.c.1CAA0EE76DBBB6BD.idx  cache.c.8D08A59A75C76E67.idx  cache.h.0BA8C83BFB6B37BF.idx  call.c.1CC362EE94C16C33.idx  call.h.F98439EEAD95A124.idx  cbw.c.AE8CBAEA87F978EB.idx  cli.c.7C864F58E4A67158.idx  cli.h.0546086AB96CE5F2.idx  cltd.c.B81F0558450D26D3.idx  cmov.c.C90679A10D8507C8.idx  cmp.c.CF1942F92C2BA3B7.idx  cmp.h.86AFD84CA209889A.idx  cmps.c.5301DBDAC3741FD0.idx  cmps.h.EAAC70775024964F.idx  cpu.c.0FCA6926FF10509F.idx  cpu.h.2B0AA0297A3E348D.idx  data_size.c.44088FB2CAF259C6.idx  debug.c.F769B18498D5C022.idx  dec.c.62FD7DDA3105678F.idx  dec.h.F6D3747757610C20.idx  div.c.431996CFDEA9CF53.idx  div.h.ECE0C98E800C2FC0.idx  elf.c.C0183E0C3673F7BF.idx  expr.c.545AE230CA99022B.idx  flags.c.AEE8AF5894FD2956.idx  flags.h.0D1E7405C4009535.idx  (+122 more)
nemu/include/cpu/: alu.h  instr_helper.h  reg.h
nemu/include/cpu/instr/: adc.h  add.h  and.h  call.h  cmp.h  dec.h  in.h  inc.h  or.h  out.h  push.h  ret.h  sbb.h  sub.h  test.h  xor.h
nemu/include/memory/mmu/: cache.h  page.h
nemu/include/monitor/: breakpoint.h
nemu/src/: main.c  main.c.backupa  main.d  parse_args.d
nemu/src/cpu/: alu.c  alu.d  cpu.c  cpu.d  fpu.c  fpu.d  intr.c  intr.d  reg.d
nemu/src/cpu/decode/: debug.d  modrm.d  opcode.c  opcode.d  opcode_ref.d  operand.d  sib.d
nemu/src/cpu/instr/: adc.c  adc.d  add.c  add.d  and.c  and.d  bt.d  call.c  call.d  cbw.d  cli.c  cli.d  cltd.d  cmov.d  cmp.c  cmp.d  cmps.d  data_size.d  dec.c  dec.d  div.d  flags.d  group.d  hlt.d  idiv.d  imul.d  in.c  in.d  inc.c  inc.d  int_.c  int_.d  inv.d  iret.c  iret.d  jcc.c  jcc.d  jmp.c  jmp.d  lea.c  (+46 more)
nemu/src/cpu/test/: alu_test.d  fpu_test.c  fpu_test.d
nemu/src/device/: i8259_pic.d  sdl.d
nemu/src/device/dev/: audio-web.c  audio.d  ide.c  ide.d  keyboard.d  serial.d  timer.d  vga-palette.d  vga.d
nemu/src/device/io/: mm_io.d  port_io.d
nemu/src/memory/: memory.c  memory.d
nemu/src/memory/mmu/: cache.c  cache.d  page.c  page.d  segment.c  segment.d  tlb.d
nemu/src/monitor/: breakpoint.d  elf.c  elf.d  expr.c  expr.d  ui.c  ui.d
scripts/: .single_exec_res
testcase/: Makefile
testcase/src/: 32_keyboard_inline  add  add-longlong  add-longlong.d  add.d  bit  bit.d  bubble-sort  bubble-sort.d  echo  echo.d  fact  fact.d  fib  fib.d  gotbaha  gotbaha.d  hello-inline  hello-inline.d  hello-str  hello-str.d  if-else  if-else.d  leap-year  leap-year.d  liushiyi  liushiyi.c  liushiyi.d  matrix-mul  matrix-mul-small  matrix-mul-small.d  matrix-mul.d  max  max.d  min3  min3.d  mov  mov-c  mov-c.d  mov-cmp  (+36 more)
